# icebox

./: CMakeLists.txt
include/: candidate_harvester.h  defines.h  jsmn.h  json.h  media.h  sdp.h  signaling.h  sockethelper.h
src/: CMakeLists.txt  candidate_harvester.c  icebox.c  jsmn.c  json.c  media.c  sdp.c  signaling.c  sockethelper.c
